// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupExtraDetails details when mentioned 1`] = `
<GroupExtra
  align="center"
>
  <Box
    mr={2}
  >
    <GroupShortId
      shortId="shortId"
    />
  </Box>
  <Flex
    align="center"
    mr={2}
  >
    <React.Fragment>
      <GroupExtraIcon
        className="icon icon-clock"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </React.Fragment>
    <span
      className="hidden-xs hidden-sm"
    >
       — 
    </span>
    <TimeSince
      className="hidden-xs hidden-sm"
      date="2017-07-01T02:06:02Z"
      suffix="old"
    />
  </Flex>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <Link
        className="comments"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          className="icon icon-comments"
          style={
            Object {
              "color": "#57be8c",
            }
          }
        />
        <GroupExtraIcon
          className="tag-count"
        >
          14
        </GroupExtraIcon>
      </Link>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders all details 1`] = `
<GroupExtra
  align="center"
>
  <Box
    mr={2}
  >
    <GroupShortId
      shortId="shortId"
    />
  </Box>
  <Flex
    align="center"
    mr={2}
  >
    <React.Fragment>
      <GroupExtraIcon
        className="icon icon-clock"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </React.Fragment>
    <span
      className="hidden-xs hidden-sm"
    >
       — 
    </span>
    <TimeSince
      className="hidden-xs hidden-sm"
      date="2017-07-01T02:06:02Z"
      suffix="old"
    />
  </Flex>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <Link
        className="comments"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          className="icon icon-comments"
          style={Object {}}
        />
        <GroupExtraIcon
          className="tag-count"
        >
          14
        </GroupExtraIcon>
      </Link>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders assignee and status 1`] = `
<GroupExtra
  align="center"
>
  <Box
    mr={2}
  >
    <GroupShortId
      shortId="shortId"
    />
  </Box>
  <Flex
    align="center"
    mr={2}
  >
    <React.Fragment>
      <GroupExtraIcon
        className="icon icon-clock"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </React.Fragment>
    <span
      className="hidden-xs hidden-sm"
    >
       — 
    </span>
    <TimeSince
      className="hidden-xs hidden-sm"
      date="2017-07-01T02:06:02Z"
      suffix="old"
    />
  </Flex>
  <GroupExtraCommentsAndLogger>
    <Box
      mr={2}
    >
      <Link
        className="comments"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/orgId/projectId/issues/groupId/activity/"
      >
        <GroupExtraIcon
          className="icon icon-comments"
          style={Object {}}
        />
        <GroupExtraIcon
          className="tag-count"
        >
          14
        </GroupExtraIcon>
      </Link>
    </Box>
    <Box
      className="event-annotation"
      mr={2}
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/orgId/projectId/",
            "query": Object {
              "query": "logger:javascript logger",
            },
          }
        }
      >
        javascript logger
      </Link>
    </Box>
  </GroupExtraCommentsAndLogger>
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation1",
      }
    }
    key="0"
  />
  <Box
    className="event-annotation"
    dangerouslySetInnerHTML={
      Object {
        "__html": "annotation2",
      }
    }
    key="1"
  />
  <Box>
    <span
      key="4"
    >
      <span
        key="0"
      >
        Assigned to 
      </span>
      <span
        key="2"
      >
        Assignee Name
      </span>
    </span>
  </Box>
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders last and first seen 1`] = `
<GroupExtra
  align="center"
>
  <Flex
    align="center"
    mr={2}
  >
    <React.Fragment>
      <GroupExtraIcon
        className="icon icon-clock"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </React.Fragment>
    <span
      className="hidden-xs hidden-sm"
    >
       — 
    </span>
    <TimeSince
      className="hidden-xs hidden-sm"
      date="2017-07-01T02:06:02Z"
      suffix="old"
    />
  </Flex>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders only first seen 1`] = `
<GroupExtra
  align="center"
>
  <Flex
    align="center"
    mr={2}
  >
    <TimeSince
      className="hidden-xs hidden-sm"
      date="2017-07-01T02:06:02Z"
      suffix="old"
    />
  </Flex>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;

exports[`EventOrGroupExtraDetails renders only last seen 1`] = `
<GroupExtra
  align="center"
>
  <Flex
    align="center"
    mr={2}
  >
    <React.Fragment>
      <GroupExtraIcon
        className="icon icon-clock"
      />
      <TimeSince
        date="2017-07-25T22:56:12Z"
        suffix="ago"
      />
    </React.Fragment>
  </Flex>
  <GroupExtraCommentsAndLogger />
</GroupExtra>
`;
